# ai_terminal

./: .gitignore  CMakeLists.txt  Info.plist.in  Makefile  README.md  ai-term2.0.pro  ai-terminal  ai_handler.cpp  ai_handler.h  local_tinyllama_chat.py  main.py  mainWindow.cpp  mainWindow.h  requirements.txt
ai-term2.0.app/Contents/: Info.plist
ai-terminal.app/Contents/: Info.plist
ai-terminal.app/Contents/MacOS/: ai-terminal
src/: AIHandler.cpp  AIStreamWorker.cpp  AIWorker.cpp  AssistantPane.cpp  TerminalPane.cpp  ai_handler.cpp  ai_stream_worker.cpp  ai_worker.cpp  autocomplete.cpp  main.cpp  mainWindow.cpp  mainWindow.h  terminalInput.cpp
src/ai/: AIHandler.cpp  AIStreamWorker.cpp
src/ai/headers/: AIHandler.h  AIStreamWorker.h  AIWorker.h
src/headers/: AssistantPane.h  TerminalPane.h  ai_stream_worker.h  ai_worker.h  autocomplete.h  mainWindow.h  terminalInput.h
src/ui/: Autocomplete.cpp  TerminalPane.cpp  mainWindow.cpp
src/ui/headers/: Autocomplete.h  TerminalPane.h  mainWindow.h
